[package]
name = "pollio"
version = "0.1.1"
edition = "2021"
description = "A small native event poller abstraction over epoll and kqueue"
license = "MIT"
repository = "https://github.com/arrxy/pollio"
readme = "README.md"
keywords = ["poll", "epoll", "kqueue", "event-loop", "io"]
categories = ["network-programming", "os"]
documentation = "https://docs.rs/pollio"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"